[gd_scene format=3 uid="uid://cxj8epls10mef"]

[ext_resource type="Script" uid="uid://bk6vrbk4ap3mb" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" uid="uid://dmph6j7blyabv" path="res://scripts/desktop_stream_client.gd" id="2"]
[ext_resource type="Script" uid="uid://bdy74luwj2cae" path="res://scripts/xr_pointer.gd" id="3"]
[ext_resource type="Script" path="res://scripts/screen_controller.gd" id="4"]
[ext_resource type="Script" path="res://scripts/screen_ui_panel.gd" id="5"]

[sub_resource type="StandardMaterial3D" id="1"]
albedo_color = Color(0.18, 0.2, 0.22, 1)

[sub_resource type="BoxMesh" id="2"]
size = Vector3(6, 0.1, 6)

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(6, 0.1, 6)

[sub_resource type="StandardMaterial3D" id="8"]
albedo_color = Color(0.1, 0.9, 0.6, 1)
emission_enabled = true
emission = Color(0.1, 0.9, 0.6, 1)

[sub_resource type="BoxMesh" id="6"]
size = Vector3(0.01, 0.01, 1)

[sub_resource type="StandardMaterial3D" id="9"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="SphereMesh" id="7"]
radius = 0.012

[sub_resource type="QuadMesh" id="4"]
size = Vector2(2.4, 1.35)

[sub_resource type="BoxShape3D" id="5"]
size = Vector3(2.4, 1.35, 0.02)

[node name="Main" type="Node3D" unique_id=636324955]
script = ExtResource("1")

[node name="Sun" type="DirectionalLight3D" parent="." unique_id=1123394559]
transform = Transform3D(0.6967067, -0.51459974, 0.4997868, 0, 0.6967067, 0.7173561, -0.7173561, -0.4997868, 0.48540023, 0, 0, 0)
light_energy = 2.0

[node name="Floor" type="StaticBody3D" parent="." unique_id=1279017954]

[node name="FloorMesh" type="MeshInstance3D" parent="Floor" unique_id=25105020]
material_override = SubResource("1")
mesh = SubResource("2")

[node name="FloorCollision" type="CollisionShape3D" parent="Floor" unique_id=1945577536]
shape = SubResource("3")

[node name="XROrigin3D" type="XROrigin3D" parent="." unique_id=1630457813]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D" unique_id=450088924]
current = true

[node name="LeftController" type="XRController3D" parent="XROrigin3D" unique_id=2130065141]
tracker = &"left_hand"
script = ExtResource("3")
screen_path = NodePath("../../ScreenPivot/ScreenBody")
client_path = NodePath("../../DesktopClient")
viewport_path = NodePath("../../DesktopViewport")
screen_controller_path = NodePath("../../ScreenController")

[node name="PointerRay" type="RayCast3D" parent="XROrigin3D/LeftController"]
target_position = Vector3(0, 0, -10)

[node name="Laser" type="MeshInstance3D" parent="XROrigin3D/LeftController"]
material_override = SubResource("8")
mesh = SubResource("6")

[node name="Reticle" type="MeshInstance3D" parent="XROrigin3D/LeftController"]
visible = false
material_override = SubResource("9")
mesh = SubResource("7")

[node name="RightController" type="XRController3D" parent="XROrigin3D" unique_id=916853988]
tracker = &"right_hand"
script = ExtResource("3")
screen_path = NodePath("../../ScreenPivot/ScreenBody")
client_path = NodePath("../../DesktopClient")
viewport_path = NodePath("../../DesktopViewport")
screen_controller_path = NodePath("../../ScreenController")

[node name="PointerRay" type="RayCast3D" parent="XROrigin3D/RightController" unique_id=297255388]
target_position = Vector3(0, 0, -10)

[node name="Laser" type="MeshInstance3D" parent="XROrigin3D/RightController" unique_id=1171372875]
material_override = SubResource("8")
mesh = SubResource("6")

[node name="Reticle" type="MeshInstance3D" parent="XROrigin3D/RightController" unique_id=2094890208]
visible = false
material_override = SubResource("9")
mesh = SubResource("7")

[node name="ScreenPivot" type="Node3D" parent="." unique_id=1326322949]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, -2.5)

[node name="ScreenBody" type="StaticBody3D" parent="ScreenPivot" unique_id=22809779 groups=["screen"]]

[node name="Screen" type="MeshInstance3D" parent="ScreenPivot/ScreenBody" unique_id=442746979]
mesh = SubResource("4")

[node name="ScreenCollision" type="CollisionShape3D" parent="ScreenPivot/ScreenBody" unique_id=608920815]
shape = SubResource("5")

[node name="ScreenUIPanel" type="Node3D" parent="ScreenPivot"]
script = ExtResource("5")
screen_controller_path = NodePath("../../ScreenController")

[node name="DesktopClient" type="Node" parent="." unique_id=1206704689]
script = ExtResource("2")

[node name="ScreenController" type="Node3D" parent="."]
script = ExtResource("4")
screen_pivot_path = NodePath("../ScreenPivot")
xr_camera_path = NodePath("../XROrigin3D/XRCamera3D")
right_controller_path = NodePath("../XROrigin3D/RightController")
left_controller_path = NodePath("../XROrigin3D/LeftController")

[node name="DesktopViewport" type="SubViewport" parent="." unique_id=1312272563]
size = Vector2i(1280, 720)

[node name="DesktopUI" type="Control" parent="DesktopViewport" unique_id=1644628601]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="DesktopViewport/DesktopUI" unique_id=383172681]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.07, 0.08, 0.1, 1)

[node name="TopBar" type="ColorRect" parent="DesktopViewport/DesktopUI" unique_id=1722261945]
custom_minimum_size = Vector2(0, 48)
layout_mode = 0
anchor_right = 1.0
color = Color(0.12, 0.13, 0.16, 1)

[node name="Title" type="Label" parent="DesktopViewport/DesktopUI/TopBar" unique_id=836359718]
layout_mode = 0
offset_left = 20.0
offset_top = 12.0
offset_right = 20.0
offset_bottom = 12.0
theme_override_colors/font_color = Color(0.9, 0.92, 0.95, 1)
text = "WORKDESK RUNNER"

[node name="Window" type="Panel" parent="DesktopViewport/DesktopUI" unique_id=483301527]
layout_mode = 0
offset_left = 80.0
offset_top = 120.0
offset_right = 620.0
offset_bottom = 460.0

[node name="WindowLabel" type="Label" parent="DesktopViewport/DesktopUI/Window" unique_id=657497394]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 16.0
offset_bottom = 12.0
text = "Remote Desktop Preview"

[node name="ConnectionPanel" type="Panel" parent="DesktopViewport/DesktopUI" unique_id=1560301823]
layout_mode = 0
offset_left = 24.0
offset_top = 520.0
offset_right = 620.0
offset_bottom = 640.0

[node name="ConnectionLabel" type="Label" parent="DesktopViewport/DesktopUI/ConnectionPanel" unique_id=1542640407]
layout_mode = 0
offset_left = 16.0
offset_top = 12.0
offset_right = 200.0
offset_bottom = 12.0
text = "Server URL"

[node name="ServerUrl" type="LineEdit" parent="DesktopViewport/DesktopUI/ConnectionPanel" unique_id=1951293298]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 520.0
offset_bottom = 72.0
text = "ws://10.0.0.127/ws"
placeholder_text = "ws://<server-ip>:9000/ws"

[node name="ConnectButton" type="Button" parent="DesktopViewport/DesktopUI/ConnectionPanel" unique_id=1905461088]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 124.0
offset_bottom = 112.0
text = "Connect"

[node name="DisconnectButton" type="Button" parent="DesktopViewport/DesktopUI/ConnectionPanel" unique_id=1154239532]
layout_mode = 0
offset_left = 136.0
offset_top = 80.0
offset_right = 264.0
offset_bottom = 112.0
text = "Disconnect"

[node name="Status" type="Label" parent="DesktopViewport/DesktopUI" unique_id=2069484472]
layout_mode = 0
offset_left = 24.0
offset_top = 680.0
offset_right = 24.0
offset_bottom = 680.0
text = "Desktop stream: not connected"
